--- a/src/MauiBlackJack/MauiBlackJack/AppShell.xaml
+++ b/src/MauiBlackJack/MauiBlackJack/AppShell.xaml
@@ -4,11 +4,12 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:MauiBlackJack"
+    xmlns:localview="clr-namespace:MauiBlackJack.Views"
     Shell.FlyoutBehavior="Disabled">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
+        ContentTemplate="{DataTemplate localview:MainPage}"
         Route="MainPage" />
 
 </Shell>
